--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,45 +5,45 @@ on:
   schedule:
     # every 6 hours
     - cron: "0 */6 * * *"
+
+  # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
 # The sequence of runs in this workflow:
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      # Generates the snake
+      # Generates the snake  
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: meguvercin
+          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       # Show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
 
-      # Configure git
-      - name: Set up Git
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
-      # Commit and push the changes
-      - name: Commit and push changes
-        run: |
-          git add dist/github-contribution-grid-snake.gif dist/github-contribution-grid-snake.svg
-          git commit -m "Generate snake"
-          git push origin master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Push the changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
+          # The output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
